--- a/heart-design.css
+++ b/heart-design.css
@@ -19,7 +19,7 @@ body {
     position: relative;
     left: 45%;
     transform: rotate(45deg);
-    box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E;
+    animation: pulse 1s infinite cubic-bezier(0.34, 1.56, 0.64, 1);
 }
 
 #left-side{
@@ -27,5 +27,17 @@ body {
     top: 30px;
     right: 30px;
     transform: rotate(-90deg);
-    box-shadow: -25px 10px 120px #FF455E, 5px -10px 80px #FF455E;
+    animation: pulseRotate 1s infinite cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+@keyframes pulse {
+    0% { transform: scale(1) rotate(45deg); background: #FF455E; box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
+    50% { transform: scale(1.5) rotate(45deg); background: #4577ff; box-shadow: -5px -10px 80px #4577ff, 25px 10px 120px #4577ff;}
+    100% { transform: scale(1) rotate(45deg); background: #FF455E; box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
+}
+
+@keyframes pulseRotate {
+    0% { transform: rotate(-90deg); background: #FF455E; box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
+    50% { transform: rotate(-90deg); background: #4577ff; box-shadow: -5px -10px 80px #4577ff, 25px 10px 120px #4577ff;}
+    100% { transform: rotate(-90deg); background: #FF455E; box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
 }
