--- a/heart-design.css
+++ b/heart-design.css
@@ -20,6 +20,7 @@ body {
     left: 45%;
     transform: rotate(45deg);
     animation: pulse 1s infinite cubic-bezier(0.34, 1.56, 0.64, 1);
+    background: #FF455E;
 }
 
 #left-side{
@@ -27,17 +28,18 @@ body {
     top: 30px;
     right: 30px;
     transform: rotate(-90deg);
+    background: #FF455E;
     animation: pulseRotate 1s infinite cubic-bezier(0.34, 1.56, 0.64, 1);
 }
 
 @keyframes pulse {
-    0% { transform: scale(1) rotate(45deg); background: #FF455E; box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
-    50% { transform: scale(1.5) rotate(45deg); background: #4577ff; box-shadow: -5px -10px 80px #4577ff, 25px 10px 120px #4577ff;}
-    100% { transform: scale(1) rotate(45deg); background: #FF455E; box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
+    0% { transform: scale(1) rotate(45deg); box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
+    50% { transform: scale(1.5) rotate(45deg); box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E;}
+    100% { transform: scale(1) rotate(45deg); box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
 }
 
 @keyframes pulseRotate {
-    0% { transform: rotate(-90deg); background: #FF455E; box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
-    50% { transform: rotate(-90deg); background: #4577ff; box-shadow: -5px -10px 80px #4577ff, 25px 10px 120px #4577ff;}
-    100% { transform: rotate(-90deg); background: #FF455E; box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
+    0% { transform: rotate(-90deg); box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
+    50% { transform: rotate(-90deg); box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E;}
+    100% { transform: rotate(-90deg); box-shadow: -5px -10px 80px #FF455E, 25px 10px 120px #FF455E; }
 }
